@@ -71,6 +71,8 @@ class MainWindow : public Gtk::Window {
 
 		void on_search_channel();
 		void on_preview(const std::string& filename);
+		/** 根据界面大小更新mplayer画面的大小*/
+		void on_update_video_widget();
 		void on_drog_data_received(const Glib::RefPtr<Gdk::DragContext>& context,
 				int, int, const Gtk::SelectionData& selection_data,
 				guint,guint time);
